adding version and publish metadata in hunt model
